# utilities

./: .gitlab-ci.yml  build_depends.repos
autoware_map/: README.md  package.xml
autoware_map/include/autoware_map/: map_elements.hpp
autoware_map/lib/autoware_map/: map_handler.cpp
runtime_manager/scripts/: computing.yaml  rtmgr.py
vector_map_converter/: CMakeLists.txt  README.md  package.xml
vector_map_converter/countries/: OpenDRIVE.csv
vector_map_converter/include/opendrive2autoware_converter/: map_writer.h  opendrive_loader.h  opendrive_objects.h  opendrive_road.h  xml_helpers.h
vector_map_converter/include/vector_map_converter/: autoware2laneletmap.hpp  autoware2vectormap.hpp  lanelet2autowaremap.hpp  vectormap2lanelet.hpp
vector_map_converter/src/: autoware2laneletmap.cpp  autoware2laneletmap_core.cpp  autoware2vectormap.cpp  autoware2vectormap_core.cpp  lanelet2autowaremap.cpp  lanelet2autowaremap_core.cpp  lanelet2vectormap.cpp  lanelet2vectormap_core.cpp  opendrive2autowaremap.cpp  vectormap2lanelet.cpp  vectormap2lanelet_core.cpp
vector_map_converter/src/opendrive2autowaremap_core/: map_writer.cpp  odr_spiral.cpp  opendrive_loader.cpp  opendrive_objects.cpp  opendrive_road.cpp  xml_helpers.cpp
